--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 
   <h2>4. Third-party Services</h2>
   <p>Unisync may use third-party services such as:<br>
-  - Firebase for notifications or crash reporting.<br>
-  - Google Gemini API for AI-based features (if enabled).<br>
+  - Firebase for notifications<br>
   These services may collect limited information as per their own privacy policies.</p>
 
   <h2>5. Data Sharing</h2>
@@ -55,7 +54,7 @@
 
   <h2>6. Your Choices</h2>
   <p>- You can stop all collection of information by uninstalling the app.<br>
-  - You may contact us to request deletion of any stored data (if applicable).</p>
+  </p>
 
   <h2>7. Changes to This Privacy Policy</h2>
   <p>We may update this policy from time to time. Any changes will be reflected here and communicated via app updates or notifications.</p>
